quiddity.user.css
/* ==UserStyle==
@name        Wikim quiddity's tweaks
@namespace   StylishThemes
@version     1.0.55
@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
@updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
@license     CC-BY-SA-4.0
@author      quiddity-wp
==/UserStyle== */
@-moz-document domain("wikipedia.org"),
domain("meta.wikimedia.org"),
domain("office.wikimedia.org"),
domain("commons.wikimedia.org"),
domain("species.wikimedia.org"),
domain("outreach.wikimedia.org"),
domain("wikimania.wikimedia.org"),
domain("foundation.wikimedia.org"),
domain("wikitech.wikimedia.org"),
domain("wiktionary.org"),
domain("mediawiki.org"),
domain("wikisource.org"),
domain("wikivoyage.org"),
domain("wikibooks.org"),
domain("wikinews.org"),
domain("wikiversity.org"),
domain("wikiquote.org"),
domain("wikidata.org"),
domain("beta.wmflabs.org"),
domain("wikifunctions.org") {
  /* Stop Menus jumping on page load */
  @import url('https://meta.wikimedia.org/w/index.php?title=MediaWiki:Gadget-MoreMenu-pagestyles.en.css&action=raw&ctype=text/css'); 
  
  /* hide the Vector-legacy ToC's annoying "[hide]" links */
  .toctogglespan {
    display: none;
  }
  
  /* Float the section-header links "[edit] [edit source]" to right, where they're less distracting  */
  .mw-editsection {
    float: right;
    padding-top: 5px
  }
  
  /* Replace section-edit links with icons */
  .mw-editsection-visualeditor {
    background: url(https://upload.wikimedia.org/wikipedia/commons/8/8a/OOjs_UI_icon_edit-ltr-progressive.svg) no-repeat;
    background-size: 12px;
    display: inline-block;
    padding:  4px 0 0 0;
    width: 12px;
	  font-size: 1px;
    text-decoration: none;
  }
  .mw-editsection > a:not(.mw-editsection-visualeditor) {
    background: url(https://upload.wikimedia.org/wikipedia/commons/8/8f/OOjs_UI_icon_wikiText-progressive.svg) no-repeat;
    background-size: 15px;
    display: inline-block;
    padding: 4px;
    width: 12px;
	  font-size: 1px;
    text-decoration: none;
  }
  .mw-editsection-bracket {
    font-size: 10px;
    display: none;
  }
  .mw-editsection-divider {
    font-size: 10px;
    padding-right: 2px;
  }
  
  /* Bigger text in NavPopups gadget */
  .navpopup {
    font-size: 0.875em; 
    line-height: 140%;
  }
  .popup_menu {
    margin-top: 1.1em;
  }
  
  /* Change the color of the highlightmyname script */
  span.ais523hmn {
    background-color: #fbe498 !important;
  }
  
  /* Opacity in RC/Watchlist for users with 500+ edits */
  .mw-changeslist-user-experienced {
    opacity: 0.7;
  }
  
  /* Smaller margin for RecentChanges pages */
  .client-js .mw-changeslist table.mw-enhanced-rc {
    margin-left: 15px
  }
  
  /* Opacity for revert/ed-edits in history pages */
  .mw-tag-mw-undo,
  .mw-tag-mw-rollback,
  .mw-tag-mw-reverted {
    opacity: 0.2;
  }
  
  /* Test ooui tweaks, smaller menu rows */
  .oo-ui-menuOptionWidget {
    padding: 0.3em 1em;
  }
  
  /* Hide the Legend box on RC pages */
  .mw-changeslist-legend {
    display: none;
  }
  
  /* Hide the "Mute" links in sidebar */
  #t-mute {
    display: none;
  }
  
  /* Hide the edit-icon for Wikidata sidebar link */
  .wb-langlinks-link .wbc-editpage:before {
    display: none
  }
  
  /* Make disambig links orange */
  a.mw-disambig {
    color: #ff8921;
  }
  
  /* Bold the sidebar's interwiki links to Enwiki/Simple, and interproject links to Commons/WikiVoyage/Wikisource */
  .interwiki-en,
  .interwiki-simple,
  .wb-otherproject-commons,
  .wb-otherproject-wikivoyage,
  .wb-otherproject-wikisource,
  .wikibase-sitelinkview-enwiki {
    font-weight: bold;
  }
  
  /* Force reduced # of rows in editing window */
  #wpTextbox1 {
    height: 25em;
  }
  
  /* Global Font tweaks, better typography */
  h4 {
    font-size: 100% !important;
  }
  h5 {
    font-size: 90% !important;
  }
  h6 {
    font-size: 80% !important;
  }
  
  /* Hide "Retrieved [date]" in references */
  .reference-accessdate {
    display: none;
  }
  
  /* Hide the Vector-2022 "switch back" link in sidebar */
  .mw-sidebar-action {
    display: none;
  }
  
  /* Vertical-align content in Tables */
  table.wikitable > tr > th,
  table.wikitable > tr > td,
  table.wikitable > * > tr > th,
  table.wikitable > * > tr > td {
    vertical-align: top;
  }
  
  /* Hide the "print/export" sidebar navbox */
  #p-coll-print_export {
    display: none;
  }
  
/* VECTOR 2022 STUFF BELOW */
  
/* ToC tweaks */
  /* Change "Beginning" to an Up-arrow */
  #toc-mw-content-text div{
    visibility: hidden;
  }
  #toc-mw-content-text div::after {
    visibility: visible;
    content: "🠕";
    display: block;
    position: absolute;
    top: 2px;
  }
  /* Auto-expand sections, and hide the H2-arrows */
  .client-js .sidebar-toc .sidebar-toc-level-1 .sidebar-toc-list-item {
    display: block;
  }
  .sidebar-toc-toggle {
    visibility: hidden;
  }
  .sidebar-toc {
    padding-left: 5px !important; 
  }
  /* Bold the H1s */
  .sidebar-toc-level-1 {
    font-weight: 600;
  }
  .sidebar-toc-level-2 {
    font-weight: normal;
  }  
  /* Smaller "Contents" */
  .sidebar-toc-title {
  font-size: 12px !important;
  }
  /* Add border */
  @media screen and (min-width: 1000px) {
    .sidebar-toc {
      border-right: 1px lightgray solid;
      border-bottom: 1px lightgray solid;
      border-top: 1px lightgray solid;
    }
  }
  .sidebar-toc:after {
    display: none;
  }
  
/* Force sticky header in smaller windows */
  @media screen and (min-width: 450px) {
    .vector-sticky-header {
      height: 55px;
      display: flex;
    }
  }
  /* Move button for ToC-collapsed down below the sticky-header, and add border */
  .vector-below-page-title #vector-toc-collapsed-button {
    top: 55px;
    border: lightgray 1px solid;
  }

/* Fix the jumping TOC upon first appearance when scrolling */
  .mw-table-of-contents-container.mw-sticky-header-element {
    top: 56px !important;
  }
  .client-js .vector-sticky-header-visible .mw-sticky-header-element {
    top: 56px !important;
  }
  /* Hide the word "Contents" in that case */
  @media screen and (max-width: 999px) {
    .sidebar-toc-title {
      visibility: hidden;
    }
  }
    
  
/* Force ToC at smaller width   -- BROKEN
  @media screen and (min-width: 720px) {
    .sidebar-toc {
      display: block !important;
    }
  }  
  */
  
  
/* Force mw-header to be sticky -- REMOVE FOR NOW - COMPLEXITIES ABOUND!
  .mw-header {
    position: fixed; 
    background: white; 
    width: calc(100% - 40px);
  }
  */
  /* Force Main Menu to show when scrolled  
  @media screen and (max-width: 999px) {
    .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container #mw-panel {
      margin-top: 50px;
      position: fixed;
      z-index: 4;
      border: 1px lightgray solid
    }
  } 
  */
}

